# Projet_scoring

./: README.md  RegLog.ipynb  main.py  model.py  notebook.ipynb  notebook_final.ipynb  notebook_projetscoring.ipynb  pre_processing.py  pyproject.toml
.ipynb_checkpoints/: notebook_projetscoring-checkpoint.ipynb
lina/: lina.py  pyproject.toml  scoring.ipynb  scoring_lina.ipynb
morgan/: analyse_exp.ipynb  main.py  model.py  pre_processing.py
sharon/: Interprétation des résultats des distrib.groovy  exploration_donnees.ipynb  traitement_données.ipynb
sharon/Brouillion/: exploration_donnees.ipynb  propre.ipynb  traitement_donnees_mediane.ipynb  traitement_données.ipynb
sharon/propre/: JSP_jsp.ipynb  Missing.ipynb  RF.ipynb  RegLog.ipynb  notebook.ipynb  outlier_isolation_forest.ipynb
sharon/propre/.ipynb_checkpoints/: Missing-checkpoint.ipynb  Missing_2-checkpoint.ipynb
tonin/: tonin.ipynb
