[tool.poetry]
name = "projet-scoring"
version = "0.1.0"
description = ""
authors = ["morganjowitt <jowitt.morgan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pip = "^24.2"
ipykernel = "^6.29.5"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
